--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <h1>My Resume</h1>
-        <img src="./just some random photos/this picture.jpeg" height="100" alt="My p photo">
+        <img src="./image.png" height="100" alt="My p photo">
         <p>Benjamin Ejike Aham</p>
         <hr>
         <h2>Summary</h2>
